--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-GG_MESSAGE="${{shared.GG_MESSAGE}}"
-GG_SUB_TITLE="${{shared.GG_SUB_TITLE}}"
-GG_TITLE="${{shared.GG_TITLE}}"
+GG_MESSAGE_INCOMING="${{shared.GG_MESSAGE_INCOMING}}"
+GG_SUB_TITLE_INCOMING="${{shared.GG_SUB_TITLE_INCOMING}}"
+GG_TITLE_INCOMING="${{shared.GG_TITLE_INCOMING}}"
 JIRA_API_TOKEN="${{shared.JIRA_API_TOKEN}}"
 JIRA_EMAIL="${{shared.JIRA_EMAIL}}"
 REMINDER_BOT_URL="${{shared.REMINDER_BOT_URL}}"
