--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ GG_SUB_TITLE_INCOMING="${{shared.GG_SUB_TITLE_INCOMING}}"
 GG_TITLE_INCOMING="${{shared.GG_TITLE_INCOMING}}"
 JIRA_API_TOKEN="${{shared.JIRA_API_TOKEN}}"
 JIRA_EMAIL="${{shared.JIRA_EMAIL}}"
-REMINDER_BOT_URL="${{shared.REMINDER_BOT_URL}}"
+REMINDER_BOT_URL_INCOMING="${{shared.REMINDER_BOT_URL_INCOMING}}"
 MISS_FTC="${{shared.MISS_FTC}}"
 
